@@ -1,3 +1,8 @@
+Sun Jul 10 09:46:14 2011  Masaya Tarui  <tarui@ruby-lnag.org>
+
+	* range.c (range_max): fix behavior with excluded end value.
+	  [Bug #4591]
+
 Sun Jul 10 09:13:18 2011  Eric Hodel  <drbrain@segment7.net>
 
 	* NEWS:  Fix RubyGems version.  [Ruby 1.9 - Bug #5004]
